--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "strange-facility"
-version = "2.0.0"
+version = "3.0.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -14,6 +14,9 @@ js-sys = "0.3"
 console_error_panic_hook = "0.1.7"
 yew = { version = "0.21", features = ["csr"] }
 serde = { version = "1", features = ["derive"] }
+gloo = "0.11"
+wasm-logger = "0.2.0"
+log = "0.4.19"
 
 
 #[workspace]
