--- a/Trunk.toml
+++ b/Trunk.toml
@@ -1,6 +1,6 @@
 [build]
 target = "./index.html"
-public_url = "/strange-facility-3-1"
+public_url = "/strange-facility-4"
 release = true
 
 [watch]
